social media icons point to software.

--- a/widgets/auto-responder/Body Area/Responsive Sonicwall Default Sales Contact for License Key.html
+++ b/widgets/auto-responder/Body Area/Responsive Sonicwall Default Sales Contact for License Key.html
@@ -240,26 +240,26 @@
                                                     <img src="http://software.dell.com/images/email/blank.gif" width="20">
                                                     <![endif]-->
                                                     <a href="https://plus.google.com/+DellSoftware/posts" class="inline-block mr-20">
-                                                        <img src="http://stage.software.dell.com/images/email/icon-google.png" alt="google"/>
+                                                        <img src="http://software.dell.com/images/email/icon-google.png" alt="google"/>
                                                     </a>
                                                     <!--[if gte mso 9]>
                                                     <img src="http://software.dell.com/images/email/blank.gif" width="20">
                                                     <![endif]-->
                                                     <a href="https://twitter.com/DellSoftware" class="inline-block mr-20">
-                                                        <img src="http://stage.software.dell.com/images/email/icon-twitter.png" alt="twitter"/>
+                                                        <img src="http://software.dell.com/images/email/icon-twitter.png" alt="twitter"/>
                                                     </a>
                                                     <!--[if gte mso 9]>
                                                     <img src="http://software.dell.com/images/email/blank.gif" width="20">
                                                     <![endif]-->
                                                     <a href="https://www.linkedin.com/company/dell-software?trk=biz-brand-tree-co-logo"
                                                        class="inline-block mr-20">
-                                                        <img src="http://stage.software.dell.com/images/email/icon-linkedin.png" alt="linkedin"/>
+                                                        <img src="http://software.dell.com/images/email/icon-linkedin.png" alt="linkedin"/>
                                                     </a>
                                                     <!--[if gte mso 9]>
                                                     <img src="http://software.dell.com/images/email/blank.gif" width="20">
                                                     <![endif]-->
                                                     <a href="https://www.facebook.com/dellsoftware" class="inline-block">
-                                                        <img src="http://stage.software.dell.com/images/email/icon-facebook.png" alt="facebook"/>
+                                                        <img src="http://software.dell.com/images/email/icon-facebook.png" alt="facebook"/>
                                                     </a>
                                                 </td>
                                                 <td class="expander"></td>
