--- a/widgets/auto-responder/Body Area/Responsive Trial Download Default Template.html
+++ b/widgets/auto-responder/Body Area/Responsive Trial Download Default Template.html
@@ -203,7 +203,7 @@
                                                     <img src="http://software.dell.com/images/email/blank.gif" width="20" class="valign-middle">
                                                     <![endif]-->
                                                     <a href="https://plus.google.com/+DellSoftware/posts" class="inline-block mr-20">
-                                                        <img src="http://stage.software.dell.com/images/email/icon-google.png" alt="google" class="valign-middle"/>
+                                                        <img src="http://software.dell.com/images/email/icon-google.png" alt="google" class="valign-middle"/>
                                                     </a>
                                                 </td>
                                                 <td>
@@ -211,7 +211,7 @@
                                                     <img src="http://software.dell.com/images/email/blank.gif" width="20" class="valign-middle">
                                                     <![endif]-->
                                                     <a href="https://twitter.com/DellSoftware" class="inline-block mr-20">
-                                                        <img src="http://stage.software.dell.com/images/email/icon-twitter.png" alt="twitter" class="valign-middle"/>
+                                                        <img src="http://software.dell.com/images/email/icon-twitter.png" alt="twitter" class="valign-middle"/>
                                                     </a>
                                                 </td>
                                                 <td>
@@ -220,7 +220,7 @@
                                                     <![endif]-->
                                                     <a href="https://www.linkedin.com/company/dell-software?trk=biz-brand-tree-co-logo"
                                                        class="inline-block mr-20">
-                                                        <img src="http://stage.software.dell.com/images/email/icon-linkedin.png" alt="linkedin" class="valign-middle"/>
+                                                        <img src="http://software.dell.com/images/email/icon-linkedin.png" alt="linkedin" class="valign-middle"/>
                                                     </a>
                                                 </td>
                                                 <td>
@@ -228,7 +228,7 @@
                                                     <img src="http://software.dell.com/images/email/blank.gif" width="20" class="valign-middle">
                                                     <![endif]-->
                                                     <a href="https://www.facebook.com/dellsoftware" class="inline-block">
-                                                        <img src="http://stage.software.dell.com/images/email/icon-facebook.png" alt="facebook" class="valign-middle"/>
+                                                        <img src="http://software.dell.com/images/email/icon-facebook.png" alt="facebook" class="valign-middle"/>
                                                     </a>
                                                 </td>
                                             </tr>
