--- a/emails/edward/test.html
+++ b/emails/edward/test.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+[[widget:top]]
+
 <table class="body">
 	<tr>
 		<td class="center" align="center" valign="top">
@@ -68,7 +70,6 @@
 												<td class="expander"></td>
 											</tr>
 										</table>
-
 									</td>
 								</tr>
 							</table>
