social media for android and iphone fixes

--- a/widgets/auto-responder/Body Area/Responsive Default Sales Contact for License Key.html
+++ b/widgets/auto-responder/Body Area/Responsive Default Sales Contact for License Key.html
@@ -215,28 +215,28 @@
                         <table class="twelve columns">
                             <tr>
                                 <td class="center">
-                                    <span class="mr-20 valign-super">Share</span>
+                                    <span class="mr-20 valign-super">$$LabelShareThisPage$$</span>
                                     <!--[if gte mso 9]>
                                     <img src="http://software.dell.com/images/email/blank.gif" width="20">
                                     <![endif]-->
-                                    <a href="https://plus.google.com/+DellSoftware/posts" class="inline-block mr-20">
+                                    <a href="https://plus.google.com/+DellSoftware/posts" class="inline-block mr-10">
                                         <img src="http://software.dell.com/images/email/icon-google.png" alt="google"/>
                                     </a>
                                     <!--[if gte mso 9]>
-                                    <img src="http://software.dell.com/images/email/blank.gif" width="20">
+                                    <img src="http://software.dell.com/images/email/blank.gif" width="10">
                                     <![endif]-->
-                                    <a href="https://twitter.com/DellSoftware" class="inline-block mr-20">
+                                    <a href="https://twitter.com/DellSoftware" class="inline-block mr-10">
                                         <img src="http://software.dell.com/images/email/icon-twitter.png" alt="twitter"/>
                                     </a>
                                     <!--[if gte mso 9]>
-                                    <img src="http://software.dell.com/images/email/blank.gif" width="20">
+                                    <img src="http://software.dell.com/images/email/blank.gif" width="10">
                                     <![endif]-->
                                     <a href="https://www.linkedin.com/company/dell-software?trk=biz-brand-tree-co-logo"
-                                       class="inline-block mr-20">
+                                       class="inline-block mr-10">
                                         <img src="http://software.dell.com/images/email/icon-linkedin.png" alt="linkedin"/>
                                     </a>
                                     <!--[if gte mso 9]>
-                                    <img src="http://software.dell.com/images/email/blank.gif" width="20">
+                                    <img src="http://software.dell.com/images/email/blank.gif" width="10">
                                     <![endif]-->
                                     <a href="https://www.facebook.com/dellsoftware" class="inline-block">
                                         <img src="http://software.dell.com/images/email/icon-facebook.png" alt="facebook"/>
