--- a/widgets/auto-responder/Body Area/Responsive Trial Download Default Template.html
+++ b/widgets/auto-responder/Body Area/Responsive Trial Download Default Template.html
@@ -182,6 +182,8 @@
         </td>
     </tr>
 </table>
+
+
 <!--Social media-->
 <table class="container">
     <tr>
@@ -192,48 +194,32 @@
                         <table class="twelve columns">
                             <tr>
                                 <td class="center">
-                                    <center>
-                                        <table class="width-auto">
-                                            <tr>
-                                                <td>
-                                                    <span class="mr-20">$$LabelShareThisPage$$</span>
-                                                </td>
-                                                <td>
-                                                    <!--[if gte mso 9]>
-                                                    <img src="http://software.dell.com/images/email/blank.gif" width="20" class="valign-middle">
-                                                    <![endif]-->
-                                                    <a href="https://plus.google.com/+DellSoftware/posts" class="inline-block mr-20">
-                                                        <img src="http://software.dell.com/images/email/icon-google.png" alt="google" class="valign-middle"/>
-                                                    </a>
-                                                </td>
-                                                <td>
-                                                    <!--[if gte mso 9]>
-                                                    <img src="http://software.dell.com/images/email/blank.gif" width="20" class="valign-middle">
-                                                    <![endif]-->
-                                                    <a href="https://twitter.com/DellSoftware" class="inline-block mr-20">
-                                                        <img src="http://software.dell.com/images/email/icon-twitter.png" alt="twitter" class="valign-middle"/>
-                                                    </a>
-                                                </td>
-                                                <td>
-                                                    <!--[if gte mso 9]>
-                                                    <img src="http://software.dell.com/images/email/blank.gif" width="20" class="valign-middle">
-                                                    <![endif]-->
-                                                    <a href="https://www.linkedin.com/company/dell-software?trk=biz-brand-tree-co-logo"
-                                                       class="inline-block mr-20">
-                                                        <img src="http://software.dell.com/images/email/icon-linkedin.png" alt="linkedin" class="valign-middle"/>
-                                                    </a>
-                                                </td>
-                                                <td>
-                                                    <!--[if gte mso 9]>
-                                                    <img src="http://software.dell.com/images/email/blank.gif" width="20" class="valign-middle">
-                                                    <![endif]-->
-                                                    <a href="https://www.facebook.com/dellsoftware" class="inline-block">
-                                                        <img src="http://software.dell.com/images/email/icon-facebook.png" alt="facebook" class="valign-middle"/>
-                                                    </a>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </center>
+                                    <span class="mr-20 valign-super">$$LabelShareThisPage$$</span>
+                                    <!--[if gte mso 9]>
+                                    <img src="http://software.dell.com/images/email/blank.gif" width="10">
+                                    <![endif]-->
+                                    <a href="https://plus.google.com/+DellSoftware/posts" class="inline-block mr-10">
+                                        <img src="http://software.dell.com/images/email/icon-google.png" alt="google"/>
+                                    </a>
+                                    <!--[if gte mso 9]>
+                                    <img src="http://software.dell.com/images/email/blank.gif" width="10">
+                                    <![endif]-->
+                                    <a href="https://twitter.com/DellSoftware" class="inline-block mr-10">
+                                        <img src="http://software.dell.com/images/email/icon-twitter.png" alt="twitter"/>
+                                    </a>
+                                    <!--[if gte mso 9]>
+                                    <img src="http://software.dell.com/images/email/blank.gif" width="10">
+                                    <![endif]-->
+                                    <a href="https://www.linkedin.com/company/dell-software?trk=biz-brand-tree-co-logo"
+                                       class="inline-block mr-10">
+                                        <img src="http://software.dell.com/images/email/icon-linkedin.png" alt="linkedin"/>
+                                    </a>
+                                    <!--[if gte mso 9]>
+                                    <img src="http://software.dell.com/images/email/blank.gif" width="10">
+                                    <![endif]-->
+                                    <a href="https://www.facebook.com/dellsoftware" class="inline-block">
+                                        <img src="http://software.dell.com/images/email/icon-facebook.png" alt="facebook"/>
+                                    </a>
                                 </td>
                                 <td class="expander"></td>
                             </tr>
