created new version of the top portion of email template. still in progress.

--- a/emails/edward/test-v2.html
+++ b/emails/edward/test-v2.html
@@ -8,64 +8,24 @@
 </head>
 <body>
 
-[[widget:top-v2]]
-
 <table class="body">
 	<tr>
 		<td class="center" align="center" valign="top">
 			<center>
 
+				[[widget:top-v2]]
+
 				<table class="container">
 					<tr>
 						<td>
-							<table class="row text-size-13 mt-20 mb-15">
+
+							<table class="row">
 								<tr>
-									<td class="wrapper last valign-middle">
+									<td class="wrapper last p-0">
 										<table class="twelve columns">
 											<tr>
-												<td class="center">
-													<center>
-														<table class="width-auto">
-															<tr>
-																<td>
-																	<span class="mr-20">$$LabelShareThisPage$$</span>
-																</td>
-																<td>
-																	<!--[if gte mso 9]>
-																	<img src="http://software.dell.com/images/email/blank.gif" width="20" class="valign-middle">
-																	<![endif]-->
-																	<a href="https://plus.google.com/+DellSoftware/posts" class="inline-block mr-20">
-																		<img src="http://stage.software.dell.com/images/email/icon-google.png" alt="google" class="valign-middle"/>
-																	</a>
-																</td>
-																<td>
-																	<!--[if gte mso 9]>
-																	<img src="http://software.dell.com/images/email/blank.gif" width="20" class="valign-middle">
-																	<![endif]-->
-																	<a href="https://twitter.com/DellSoftware" class="inline-block mr-20">
-																		<img src="http://stage.software.dell.com/images/email/icon-twitter.png" alt="twitter" class="valign-middle"/>
-																	</a>
-																</td>
-																<td>
-																	<!--[if gte mso 9]>
-																	<img src="http://software.dell.com/images/email/blank.gif" width="20" class="valign-middle">
-																	<![endif]-->
-																	<a href="https://www.linkedin.com/company/dell-software?trk=biz-brand-tree-co-logo"
-																	   class="inline-block mr-20">
-																		<img src="http://stage.software.dell.com/images/email/icon-linkedin.png" alt="linkedin" class="valign-middle"/>
-																	</a>
-																</td>
-																<td>
-																	<!--[if gte mso 9]>
-																	<img src="http://software.dell.com/images/email/blank.gif" width="20" class="valign-middle">
-																	<![endif]-->
-																	<a href="https://www.facebook.com/dellsoftware" class="inline-block">
-																		<img src="http://stage.software.dell.com/images/email/icon-facebook.png" alt="facebook" class="valign-middle"/>
-																	</a>
-																</td>
-															</tr>
-														</table>
-													</center>
+												<td>
+													<img src="http://stage.software.dell.com/ecard/test/auditing/images/image1.jpg"/>
 												</td>
 												<td class="expander"></td>
 											</tr>
@@ -81,43 +41,48 @@
 				<table class="container">
 					<tr>
 						<td>
-							<table class="row text-size-13 mt-20 mb-15">
+
+							<table class="row">
+								<tbody>
 								<tr>
-									<td class="wrapper last valign-middle">
-										<table class="twelve columns">
+									<td class="wrapper p-0">
+										<table class="ten columns m-0">
+											<tbody>
 											<tr>
-												<td class="center">
-													<span class="mr-20">$$LabelShareThisPage$$</span>
-													<!--[if gte mso 9]>
-													<img src="http://software.dell.com/images/email/blank.gif" width="20" class="valign-middle">
-													<![endif]-->
-													<a href="https://plus.google.com/+DellSoftware/posts" class="inline-block mr-20">
-														<img src="http://stage.software.dell.com/images/email/icon-google.png" alt="google" class="valign-middle"/>
-													</a>
-													<!--[if gte mso 9]>
-													<img src="http://software.dell.com/images/email/blank.gif" width="20" class="valign-middle">
-													<![endif]-->
-													<a href="https://twitter.com/DellSoftware" class="inline-block mr-20">
-														<img src="http://stage.software.dell.com/images/email/icon-twitter.png" alt="twitter" class="valign-middle"/>
-													</a>
-													<!--[if gte mso 9]>
-													<img src="http://software.dell.com/images/email/blank.gif" width="20" class="valign-middle">
-													<![endif]-->
-													<a href="https://www.linkedin.com/company/dell-software?trk=biz-brand-tree-co-logo"
-													   class="inline-block mr-20">
-														<img src="http://stage.software.dell.com/images/email/icon-linkedin.png" alt="linkedin" class="valign-middle"/>
-													</a>
-													<!--[if gte mso 9]>
-													<img src="http://software.dell.com/images/email/blank.gif" width="20" class="valign-middle">
-													<![endif]-->
-													<a href="https://www.facebook.com/dellsoftware" class="inline-block">
-														<img src="http://stage.software.dell.com/images/email/icon-facebook.png" alt="facebook" class="valign-middle"/>
-													</a>
+												<td class="text-pad-left text-pad-right">
+													<h1 style="color: $$HexColor">$$Headline</h1>
+
+													<h5 class="mt-10">$$SubHeadline</h5>
 												</td>
 												<td class="expander"></td>
 											</tr>
+											</tbody>
 										</table>
+									</td>
+									<td class="wrapper last">
+										<table class="two columns">
+											<tbody>
+											<tr>
+												<td class="center hide-for-small" align="center">
+													<center>
+														<a href="$$cta_Input_URL">
+															<img src="http://software.dell.com/images/email/icon-endpt.png" class="center heading-icon" width="80">
+														</a>
+													</center>
+												</td>
+												<td class="expander"></td>
+											</tr>
+											</tbody>
+										</table>
+									</td>
+								</tr>
+								</tbody>
+							</table>
 
+							<table class="button button-$$HeaderIcon_bk m-0">
+								<tr>
+									<td>
+										<a href="$$cta_Input_URL" class="text-underline">$$cta_Input_Text</a>
 									</td>
 								</tr>
 							</table>
