created test page.

--- a/emails/naveen/index.htm
+++ b/emails/naveen/index.htm
@@ -140,6 +140,13 @@
 								</tr>
 							</table>
 
+							<table class="button button-berry m-0">
+								<tr>
+									<td>
+										<a href="#" class="text-underline">Register for the Webcast Now</a>
+									</td>
+								</tr>
+							</table>
 							<!--[if !mso]><!-->
 							<div class="show-for-small">
 								<table class="row">
